# OPD

./: .gitignore  AGENTS.md  DATA_AND_MODEL.md  DECISIONS.md  EXPERIMENT_LOG.md  PROJECT_STATUS.md  PRO_COLLABORATION.md  PRO_COMPARISON_2026-06-30.md  PRO_CONTEXT_PACKET.md  PRO_REVIEW_PACKET_2026-07-01.md  PRO_V0_NEGATIVE_RESULT_PACKET.md  README.md  RESEARCH_PLAN.md  RUNBOOK.md  TODO.md  pyproject.toml
configs/: qwen3_8b_pairwise_lora_r128_posbalanced_compact.json  qwen3_8b_pairwise_lora_r128_posbalanced_conservative.json  qwen3_8b_v0_judgment_delta_steps20.json  qwen3_8b_v0_normalized_reason_steps20.json
data/: reconcilebench_seed.jsonl  reconcilebench_v0.jsonl  reconcilebench_v0_1.jsonl
docs/: action_mode_label_guide.md  common_configs.md  pairwise_v0_1_plan.md  rank128_lora_position_balanced.md
reports/: heldout_fork_scope_pairwise_audit.csv  heldout_fork_scope_pairwise_audit.json  heldout_fork_scope_pairwise_audit.md  heldout_fork_scope_source_audit.json  pairwise_v0_1_compact_generation_mismatch_analysis.json  pairwise_v0_1_compact_generation_mismatch_analysis.md  pairwise_v0_1_compact_generation_mismatch_samples.csv  pairwise_v0_1_compact_generation_summary.md  pairwise_v0_1_compact_ontology_generation_mismatch_analysis.json  pairwise_v0_1_compact_ontology_generation_mismatch_analysis.md  pairwise_v0_1_compact_ontology_generation_mismatch_samples.csv  pairwise_v0_1_compact_ontology_generation_summary.md  pairwise_v0_1_compactscore_alignment_summary.md  pairwise_v0_1_data_audit_dev.csv  pairwise_v0_1_data_audit_dev.json  pairwise_v0_1_data_audit_dev.md  (+132 more)
(+94 files in other folders)
