[project]
name = "reconcile-opsd"
version = "0.1.0"
description = "Reconcile-OPSD research scaffold for fork-preserving judgment-delta distillation."
requires-python = ">=3.11"
dependencies = [
  "datasets",
  "transformers",
  "torch",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

